Dummy_Package_for_scratch_org/main/default/objects/User_Story_Data_Commit__c/fields/Commit_Date__c.field-meta.xml
<CustomField>
    <fullName>Commit_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Commit Date</label>
    <type>DateTime</type>
</CustomField>