Dummy_Package_for_scratch_org/main/default/objects/User_Story_Data_Commit__c/fields/Commit_Message__c.field-meta.xml
<CustomField>
    <fullName>Commit_Message__c</fullName>
    <label>Commit Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>