Dummy_Package_for_scratch_org/main/default/objects/User_Story_Data_Commit__c/fields/Data_Set__c.field-meta.xml
<CustomField>
    <fullName>Data_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Set</label>
    <referenceTo>Data_Set__c</referenceTo>
    <relationshipLabel>User Story Data Commits</relationshipLabel>
    <relationshipName>User_Story_Data_Commits</relationshipName>
    <type>Lookup</type>
</CustomField>