Dummy_Package_for_scratch_org/main/default/objects/User_Story_Data_Commit__c/fields/Execution_Job__c.field-meta.xml
<CustomField>
    <fullName>Execution_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Execution Job</label>
    <referenceTo>Deployment__c</referenceTo>
    <relationshipLabel>User Story Data Commits</relationshipLabel>
    <relationshipName>User_Story_Data_Commits</relationshipName>
    <type>Lookup</type>
</CustomField>