Dummy_Package_for_scratch_org/main/default/objects/User_Story_Data_Commit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>TEXT(Execution_Job__r.Status__c)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>