Dummy_Package_for_scratch_org/main/default/objects/User_Story_Data_Commit__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <label>User Story</label>
    <referenceTo>User_Story__c</referenceTo>
    <relationshipLabel>User Story Data Commits</relationshipLabel>
    <relationshipName>User_Story_Data_Commits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>