Dummy_Package_for_scratch_org/main/default/objects/User_Story_Data_Commit__c/validationRules/Prevent_change_Commit_Message.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_change_Commit_Message</fullName>
    <active>true</active>
    <description>This validation rule prevents the user from changing the Commit Message field once the record has been created.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(Commit_Message__c)
)</errorConditionFormula>
    <errorDisplayField>Commit_Message__c</errorDisplayField>
    <errorMessage>It is not allowed to change the Commit Message once the User Story Data Commit has been created. Please create a new User Story Data Commit.</errorMessage>
</ValidationRule>