Dummy_Package_for_scratch_org/main/default/objects/User_Story_Data_Commit__c/validationRules/Prevent_change_Data_Set.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_change_Data_Set</fullName>
    <active>true</active>
    <description>This validation rule prevents the user from changing the Data Set field once the record has been created.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(Data_Set__c)
)</errorConditionFormula>
    <errorDisplayField>Data_Set__c</errorDisplayField>
    <errorMessage>It is not allowed to change the Data Set once the User Story Data Commit has been created. Please create a new User Story Data Commit.</errorMessage>
</ValidationRule>